--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
     <body>
         <div class = "topnav">
             <div class = "logo">
-                <img src="CakesofParadiseBakeryImg/LogoRed.png">
+                <img src="CakesofParadiseBakeryImg/LogoRed.png" alt="">
                 <h1>Cakes of Paradise</h1>
             </div>
             <nav><div class = "normlinks">
@@ -57,15 +57,15 @@
                     <button class="pinkbtn">order online</button>
                 </div>
                 <div class = "imgContR">
-                    <div class="lightpinkrect"></div>
-                    <img src="CakesofParadiseBakeryImg/WeddingCake2.png" class="simpleimg1">
-                    <img src="CakesofParadiseBakeryImg/LogoRed.png" class = "logoimg">
+                    <div class="lightpinkrect" alt=""></div>
+                    <img src="CakesofParadiseBakeryImg/WeddingCake2.png" class="simpleimg1" alt = "Image of Wedding Cake">
+                    <img src="CakesofParadiseBakeryImg/LogoRed.png" class = "logoimg" alt="Image of Logo">
                 </div>
             </div>
             <div class = "content" style = "background-color: #FFC5AC;">
                 <div class = "imgContL">
-                    <div class="pinkrect" style = "background-color: #FC7C7B;"></div>
-                    <img src="CakesofParadiseBakeryImg/Malasadas.png" class="simpleimg2"> 
+                    <div class="pinkrect" style = "background-color: #FC7C7B;" alt=""></div>
+                    <img src="CakesofParadiseBakeryImg/Malasadas.png" class="simpleimg2" alt="Image of Malasadas"> 
                 </div>
                 <div class = "textCont second" 
                 style = "position: absolute; left: 45vw">
@@ -85,9 +85,9 @@
                     <div class="lightpinkrect"></div>
                     <div class="colorsquare1"></div>
                     <div class="colorsquare2"></div>
-                    <img src="CakesofParadiseBakeryImg/WeddingCake.png" class="simpleimg1" >
-                    <img src="CakesofParadiseBakeryImg/MngoCreamCheese.jpg" class="imgsquare1">
-                    <img src="CakesofParadiseBakeryImg/PumpkinCrunch.png" class="imgsquare2">
+                    <img src="CakesofParadiseBakeryImg/WeddingCake.png" class="simpleimg1" alt="Image of Wedding Cake" >
+                    <img src="CakesofParadiseBakeryImg/MngoCreamCheese.jpg" class="imgsquare1" alt="Image of Mango Cream Cheese Pie">
+                    <img src="CakesofParadiseBakeryImg/PumpkinCrunch.png" class="imgsquare2" alt =" Image of Pumpkin Crunch Pie">
 
                 </div>
             </div>
@@ -95,7 +95,7 @@
             <div class = "content" style = "background-color: #FFC5AC;">
                 <div class = "imgContL">
                     <div class="pinkrect" style = "background-color: #FC7C7B;"></div>
-                    <img src="CakesofParadiseBakeryImg/Map.png" class="simpleimg2"> 
+                    <img src="CakesofParadiseBakeryImg/Map.png" class="simpleimg2" alt =" Map of Georgetown, Seattle"> 
                 </div>
                 <div class = "textCont third" 
                 style = "position: absolute; left: 45vw;">
